# NetCamera

./: CMakeLists.txt  Makefile  README.md  env.txt  mk.sh
libs/: CMakeLists.txt
libs/common/include/: mipconfig.h  mipversioninternal.h
libs/lpc/: lpccodec.cpp  lpccodec.h
libs/tinyjpeg/: jidctflt.c
middleware/: Makefile
middleware/elog/: Makefile  elog.h  elog_async.c  elog_buf.c  elog_port.c  elog_utils.c
middleware/librtmp/: Makefile  log.c  rtmp.c  rtmp.h
middleware/t20/: Makefile
middleware/t20/include/iaac/: adk_verify.h  iaac.h
middleware/t20/include/imp/: imp_common.h
middleware/t20/include/ivs/: ivs_common.h  ivs_inf_cloud_tracker.h  ivs_inf_dynamic_tracker.h  ivs_inf_face.h  ivs_inf_fake.h  ivs_inf_figure.h  ivs_inf_head.h  ivs_inf_line.h  ivs_inf_lpr.h  ivs_inf_motion_tracker.h  ivs_inf_move.h  ivs_inf_opt_flow.h  ivs_inf_perm.h  ivs_inf_shade.h  ivs_inf_skipFace.h  ivs_inf_skipFigure.h  ivs_inf_smoke.h  ivs_inf_tracker.h  ivs_interface.h
project/: Makefile  demuxEs.c  demuxEs.h  rtmpSend.c  rtmpSend.h
project/inc/messageQueue/: message.h  message_queue.h
project/inc/taskCommon/: task_def.h
project/inc/taskMain/: main.h
project/src/: Makefile
project/src/messageQueue/: Makefile  message_queue.c  message_queue.cpp
project/src/taskCommon/: task_def.c
project/src/taskDemo/: Makefile  task_demo.c
project/src/taskMain/: main.c
src/: AudioCommon.cpp  AudioCommon.h  CMakeLists.txt  EchoCanceller.cpp  EchoCanceller.h  PackageQueue.cpp  PackageQueue.h  main.cc  readme.txt  test.cpp
src/application/: CMakeLists.txt  feedbackexample.cpp
src/core/: mipcomponentchain.cpp  mipcomponentchain.h
src/sessions/: mipaudiosession.cpp
