set(HEADERS
core/
components/input/
components/output/
components/timer/
components/mixer/
components/io/
components/transmission/
components/transform/
components/codec/
components/util/
sessions/
util/
../libs/tinyjpeg/
../libs/lpc/
)

set(SOURCES
core/mipcomponent.cpp
core/mipcomponentchain.cpp
core/mipversion.cpp
core/mipdebug.cpp
core/miptime.cpp
components/input/mipalsainput.cpp
components/input/mipjackinput.cpp
components/input/mipdirectshowcapture.cpp
components/input/mipsndfileinput.cpp
components/input/mipaudiorecorderinput.cpp
components/input/mipv4l2input.cpp
components/input/mipfrequencygenerator.cpp
components/input/mipwavinput.cpp
components/input/mipaudiofileinput.cpp
components/input/mipwinmminput.cpp
components/input/mipyuv420fileinput.cpp
components/input/mipopenslesandroidinput.cpp
components/output/mipalsaoutput.cpp
components/output/mipjackoutput.cpp
components/output/mipesdoutput.cpp
components/output/mipopenaloutput.cpp
components/output/mipalsaoutput.cpp
components/output/mipmessagedumper.cpp
components/output/mipsndfileoutput.cpp
components/output/mipqt5output.cpp
components/output/mipvideoframestorage.cpp
components/output/mipaudiotrackoutput.cpp
components/output/mipwavoutput.cpp
components/output/mipsdlaudiooutput.cpp
components/output/mipwinmmoutput.cpp
components/output/mippulseoutput.cpp
components/output/mipqt5audiooutput.cpp
components/output/mipopenslesandroidoutput.cpp
components/timer/mipaveragetimer.cpp
components/timer/mippusheventtimer.cpp
components/timer/mipinterchaintimer.cpp
components/mixer/mipmediabuffer.cpp
components/mixer/mipvideomixer.cpp
components/mixer/mipaudiomixer.cpp
components/io/mippainputoutput.cpp
components/io/mipossinputoutput.cpp
components/transmission/miprtplpcdecoder.cpp
components/transmission/miprtpvideoencoder.cpp
components/transmission/miprtph263decoder.cpp
components/transmission/miprtpspeexdecoder.cpp
components/transmission/miprtpalawencoder.cpp
components/transmission/miprtpvideodecoder.cpp
components/transmission/miprtpcomponent.cpp
components/transmission/miprtpl16encoder.cpp
components/transmission/miprtpdecoder.cpp
components/transmission/miprtpulawencoder.cpp
components/transmission/miprtpalawdecoder.cpp
components/transmission/miprtplpcencoder.cpp
components/transmission/miprtph263encoder.cpp
components/transmission/miprtpspeexencoder.cpp
components/transmission/miprtpl16decoder.cpp
components/transmission/miprtpulawdecoder.cpp
components/transmission/miprtpsilkdecoder.cpp
components/transmission/miprtpsilkencoder.cpp
components/transmission/miprtpopusencoder.cpp
components/transmission/miprtpopusdecoder.cpp
components/transmission/miprtpjpegdecoder.cpp
components/transform/mipaudiosplitter.cpp
components/transform/mipspeexechocanceller.cpp
components/transform/mipaudiodistancefade.cpp
components/transform/mipaudiofilter.cpp
components/transform/mipavcodecframeconverter.cpp
components/transform/mipsamplingrateconverter.cpp
components/transform/mipsampleencoder.cpp
components/transform/miphrirlisten.cpp
components/transform/mipaudio3dbase.cpp
components/transform/mipyuv420framecutter.cpp
components/codec/mipavcodecdecoder.cpp
components/codec/mipulawdecoder.cpp
components/codec/mipavcodecencoder.cpp
components/codec/miplpcdecoder.cpp
components/codec/mipulawencoder.cpp
components/codec/mipspeexdecoder.cpp
components/codec/mipalawdecoder.cpp
components/codec/miplpcencoder.cpp
components/codec/miptinyjpegdecoder.cpp
components/codec/mipalawencoder.cpp
components/codec/mipspeexencoder.cpp
components/codec/mipsilkdecoder.cpp
components/codec/mipsilkencoder.cpp
components/codec/mipopusencoder.cpp
components/codec/mipopusdecoder.cpp
components/util/mipoutputmessagequeue.cpp
components/util/mipoutputmessagequeuewithstate.cpp
components/util/mipoutputmessagequeuesimple.cpp
components/util/mipoutputmessagequeuewithstatesimple.cpp
sessions/mipvideosession.cpp
sessions/mipaudiosession.cpp
util/mipsignalwaiter.cpp
util/mipwavwriter.cpp
util/miprtppacketgrouper.cpp
util/mipdirectorybrowser.cpp
util/mipwavreader.cpp
util/mipspeexutil.cpp
util/miprtpsynchronizer.cpp
util/mipstreambuffer.cpp
application/feedbackexample.cpp
)


INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/deps/elog)
INCLUDE_DIRECTORIES($ENV{LIBS_INC})
INCLUDE_DIRECTORIES($ENV{COMMON_INC})
INCLUDE_DIRECTORIES(${HEADERS})

link_directories($ENV{LIBS_LIB})

ADD_EXECUTABLE(NetCamera ${SOURCES})
TARGET_LINK_LIBRARIES(NetCamera 
                        elog
                        jthread.a
                        jrtp.a
                        tinyjpeg.a
                        lpc.a
                        srtp2.a
                        asound
                        pulse-simple
                        portaudio
                        #rt
                        #jack
                        pthread )
